plugins {
    id 'application'
}

group = 'com.gaia'
version = '0.1.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

def osName = System.getProperty('os.name').toLowerCase()

def defaultJvmArgs = [
    '--enable-native-access=ALL-UNNAMED'
]

if (osName.contains('mac')) {
    defaultJvmArgs.add('-XstartOnFirstThread')
}

application {
    mainClass = 'com.gaia.GaiaMain'
    applicationDefaultJvmArgs = defaultJvmArgs
}

dependencies {
    implementation project(':engine')
    implementation 'com.google.code.gson:gson:2.10.1'
}